--- a/templates/certificado.hbs
+++ b/templates/certificado.hbs
@@ -347,7 +347,7 @@
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 2: values en lugar de results -->
                     {{#each values}}
-                    <td class="explanation-cell">{{.}}</td>
+                    <td class="explanation-cell">{{values.0}}</td>
                     {{/each}}
                 </tr>
                 {{/each}}
@@ -421,7 +421,7 @@
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 5: values en lugar de results -->
                     {{#each values}}
-                    <td class="data-cell">{{.}}</td>
+                    <td class="data-cell">{{values.0}}</td>
                     {{/each}}
                 </tr>
                 {{/each}}
@@ -443,7 +443,7 @@
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 7: values en lugar de results -->
                     {{#each values}}
-                    <td class="data-cell">{{.}}</td>
+                    <td class="data-cell">{{values.0}}</td>
                     {{/each}}
                 </tr>
                 {{/each}}
