Initial commit-mejora la escturta del hbs

--- a/templates/certificado.hbs
+++ b/templates/certificado.hbs
@@ -348,7 +348,7 @@
                     </td>
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 2: values en lugar de results -->
-                    {{#each values}}
+                    {{#each testValues}}
                     <td class="explanation-cell">{{this}}</td>
                     {{/each}}
                 </tr>
@@ -422,7 +422,7 @@
                     </td>
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 5: values en lugar de results -->
-                    {{#each values}}
+                    {{#each microbiologyValues}}
                     <td class="data-cell">{{this}}</td>
                     {{/each}}
                 </tr>
@@ -444,7 +444,7 @@
                     </td>
                     <td class="range-cell">{{acceptableRange}}</td>
                     <!-- 🚀 CAMBIO 7: values en lugar de results -->
-                    {{#each values}}
+                    {{#each contaminantValues}}
                     <td class="data-cell">{{this}}</td>
                     {{/each}}
                 </tr>
