--- a/templates/certificado.hbs
+++ b/templates/certificado.hbs
@@ -244,47 +244,47 @@
             <!-- Row 1 -->
             <div class="info-cell info-label">Export Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{exportNumber}}</div>
+            <div class="info-cell info-value">{{header.exportNumber}}</div>
             <div class="info-cell info-label">Product Description</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{productDescription}}</div>
+            <div class="info-cell info-value">{{header.productDescription}}</div>
 
             <!-- Row 2 -->
             <div class="info-cell info-label">Client</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{client}}</div>
+            <div class="info-cell info-value">{{header.client}}</div>
             <div class="info-cell info-label">Material Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{materialNumber}}</div>
+            <div class="info-cell info-value">{{header.materialNumber}}</div>
 
             <!-- Row 3 -->
             <div class="info-cell info-label">Brand Name</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{brandName}}</div>
+            <div class="info-cell info-value">{{header.brandName}}</div>
             <div class="info-cell info-label">Product Code</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{productCode}}</div>
+            <div class="info-cell info-value">{{header.productCode}}</div>
 
             <!-- Row 4 -->
             <div class="info-cell info-label">Container Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{containerNumber}}</div>
+            <div class="info-cell info-value">{{header.containerNumber}}</div>
             <div class="info-cell info-label">Specification ID</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{specificationId}}</div>
+            <div class="info-cell info-value">{{header.specificationId}}</div>
 
             <!-- Row 5 -->
             <div class="info-cell info-label">Seal Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{sealNumber}}</div>
+            <div class="info-cell info-value">{{header.sealNumber}}</div>
             <div class="info-cell info-label">Manufacturing Site Location</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{manufacturingSiteLocation}}</div>
+            <div class="info-cell info-value">{{header.manufacturingSiteLocation}}</div>
 
             <!-- Row 6 -->
             <div class="info-cell info-label">Order Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{orderNumber}}</div>
+            <div class="info-cell info-value">{{header.orderNumber}}</div>
             <div class="info-cell info-label"></div>
             <div class="info-cell info-separator"></div>
             <div class="info-cell info-value"></div>
@@ -292,7 +292,7 @@
             <!-- Row 7 -->
             <div class="info-cell info-label">Invoice Number</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{invoiceNumber}}</div>
+            <div class="info-cell info-value">{{header.invoiceNumber}}</div>
             <div class="info-cell info-label"></div>
             <div class="info-cell info-separator"></div>
             <div class="info-cell info-value"></div>
@@ -300,7 +300,7 @@
             <!-- Row 8 -->
             <div class="info-cell info-label">Internal Container</div>
             <div class="info-cell info-separator">:</div>
-            <div class="info-cell info-value">{{internalContainer}}</div>
+            <div class="info-cell info-value">{{header.internalContainer}}</div>
             <div class="info-cell info-label"></div>
             <div class="info-cell info-separator"></div>
             <div class="info-cell info-value"></div>
